fix for the search field on tablets

--- a/assets/less/flyout.less
+++ b/assets/less/flyout.less
@@ -241,6 +241,9 @@ html, body {
 
 // just tablets & small desktops
 @media (min-width: 768px) and (max-width: 979px) {
+  #flyout_search_container {
+    width: auto !important;
+  }
 }
 
 // small desktops, tablets and phones
